<resources>
    <string name="tracker_settings_title">Trackers</string>
    <string name="tracker_settings_back">Back</string>
    <string name="tracker_settings_active">Active tracker</string>
    <string name="tracker_settings_mirrors_for">Mirrors for %s</string>
    <string name="tracker_settings_no_mirrors">No mirrors known. Tap "Add custom" to register one.</string>
    <string name="tracker_settings_add_custom">Add custom mirror</string>
    <string name="tracker_settings_probe_now">Probe now</string>
    <string name="tracker_settings_remove_mirror">Remove custom mirror</string>
    <string name="tracker_settings_add_mirror_title">Add mirror for %s</string>
    <string name="tracker_settings_url_label">URL</string>
    <string name="tracker_settings_url_placeholder">https://my-mirror.example/</string>
    <string name="tracker_settings_priority">Priority: %d</string>
    <string name="tracker_settings_protocol">Protocol</string>
    <string name="tracker_settings_protocol_https">HTTPS</string>
    <string name="tracker_settings_protocol_http">HTTP</string>
    <string name="tracker_settings_protocol_http3">HTTP3</string>
    <string name="tracker_settings_add">Add</string>
    <string name="tracker_settings_cancel">Cancel</string>
    <string name="tracker_settings_healthy">Healthy</string>
    <string name="tracker_settings_degraded">Degraded</string>
    <string name="tracker_settings_unhealthy">Unhealthy</string>
    <string name="tracker_settings_unknown">Unknown</string>
</resources>
